crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_mutability_specifiers/receive_functions/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: State mutability already specified as "payable".
   ╭─[input.sol:5:30]
   │
 5 │   receive() external payable payable {}
   │                              ───┬───  
   │                                 ╰───── Error occurred here.
───╯
